--- a/index.html
+++ b/index.html
@@ -20,35 +20,37 @@
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo" lang="en">
-          <span class="half-logo">Web</span>Studio
-        </a>
-        <!---Лого сайта-->
-        <ul class="list nav-head">
-          <!---Меню в хедере-->
+      <div class="container">
+        <nav class="container">
+          <a href="./index.html" class="logo" lang="en">
+            <span class="half-logo">Web</span>Studio
+          </a>
+          <!---Лого сайта-->
+          <ul class="list nav-head container">
+            <!---Меню в хедере-->
+            <li>
+              <a href="" class="link"> Студия </a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link"> Портфолио </a>
+            </li>
+            <li>
+              <a href="" class="link"> Контакты </a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="list post-and-phone container">
+          <!--Почта и телефон-->
           <li>
-            <a href="" class="link"> Студия </a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="./portfolio.html" class="link"> Портфолио </a>
-          </li>
-          <li>
-            <a href="" class="link"> Контакты </a>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="list post-and-phone">
-        <!--Почта и телефон-->
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
@@ -58,8 +60,8 @@
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section>
-        <ul class="list">
-          <li>
+        <ul class="list about-section">
+          <li class="about-topic">
             <h3 class="about-us">Внимание к деталям</h3>
             <p class="about-us-text">
               Идейные соображения, а также начало повседневной работы по
@@ -91,8 +93,8 @@
       </section>
       <section>
         <h2 class="caption">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
+        <ul class="list container">
+          <li class="action-jpeg">
             <img
               src="./Images/action1.jpg"
               alt="Разработка логики программы"
@@ -100,7 +102,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="action-jpeg">
             <img
               src="./Images/action2.jpg"
               alt="Ищем телефоны по фотороботу"
@@ -108,7 +110,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="action-jpeg">
             <img
               src="./Images/action3.jpg"
               alt="Гадание по планшету"
@@ -118,10 +120,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team-introduction">
         <h2 class="caption">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="list container">
+          <li class="team-list">
             <img
               src="./Images/team-card-1.jpg"
               alt="Игорь Демьяненко"
@@ -131,7 +133,7 @@
             <h3 class="team">Игорь Демьяненко</h3>
             <p lang="en" class="team-role">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./Images/team-card-2.jpg"
               alt="Ольга Репина"
@@ -141,7 +143,7 @@
             <h3 class="team">Ольга Репина</h3>
             <p lang="en" class="team-role">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./Images/team-card-3.jpg"
               alt="Николай Тарасов"
@@ -151,7 +153,7 @@
             <h3 class="team">Николай Тарасов</h3>
             <p lang="en" class="team-role">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./Images/team-card-4.jpg"
               alt="Михаил Ермаков"
@@ -165,7 +167,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo" lang="en">
+      <a href="./index.html" class="lower-logo" lang="en">
         <span class="left-half-logo-footer">Web</span
         ><span class="right-half-logo-footer">Studio</span>
       </a>
