--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="container">
+      <nav class="container">
         <a href="./index.html" class="logo" lang="en">
           <span class="half-logo">Web</span>Studio
         </a>
         <!---Лого сайта-->
-        <ul class="list nav-head">
+        <ul class="list nav-head container">
           <!---Меню в хедере-->
           <li>
             <a href="" class="link"> Студия </a>
@@ -33,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="list post-and-phone">
+      <ul class="list post-and-phone container">
         <!--Почта и телефон-->
         <li>
           <a href="mailto:info@devstudio.com" class="link"
@@ -47,9 +51,9 @@
     </header>
 
     <main>
-      <h1 class="h1-portfolio">Портфолио</h1>
+      <h1 class="visually-hidden">Портфолио</h1>
       <section>
-        <ul class="list">
+        <ul class="list container filter-button">
           <li>
             <button type="button" class="portfolio-button">Все</button>
           </li>
@@ -67,8 +71,8 @@
           </li>
         </ul>
 
-        <ul class="list">
-          <li>
+        <ul class="list container">
+          <li class="projects">
             <img
               src="./Images/portfolio-1.jpg"
               alt="Технокряк"
@@ -78,7 +82,7 @@
             <h2 class="company-name">Технокряк</h2>
             <p class="project-type">Веб-сайт</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-2.jpg"
               alt="Постер New Orlean vs Golden Star"
@@ -90,7 +94,7 @@
             </h2>
             <p class="project-type">Дизайн</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-3.jpg"
               alt="Ресторан Seafood"
@@ -102,7 +106,7 @@
             </h2>
             <p class="project-type">Приложение</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-4.jpg"
               alt="Проект Prime"
@@ -112,7 +116,7 @@
             <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
             <p class="project-type">Маркетинг</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-5.jpg"
               alt="Проект Boxes"
@@ -122,7 +126,7 @@
             <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
             <p class="project-type">Приложение</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-6.jpg"
               alt="Inspiration has no Borders"
@@ -132,7 +136,7 @@
             <h2 lang="en" class="company-name">Inspiration has no Borders</h2>
             <p class="project-type">Веб-сайт</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-7.jpg"
               alt="Издание Limited Edition"
@@ -144,7 +148,7 @@
             </h2>
             <p class="project-type">Дизайн</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-8.jpg"
               alt="Проект LAB"
@@ -154,7 +158,7 @@
             <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
             <p class="project-type">Маркетинг</p>
           </li>
-          <li>
+          <li class="projects">
             <img
               src="./Images/portfolio-9.jpg"
               alt="Growing Business"
@@ -169,7 +173,7 @@
     </main>
 
     <footer>
-      <a href="./index.html" class="logo" lang="en">
+      <a href="./index.html" class="lower-logo" lang="en">
         <span class="left-half-logo-footer">Web</span>
         <span class="right-half-logo-footer">Studio</span>
       </a>
