--- a/index.html
+++ b/index.html
@@ -19,35 +19,40 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <nav class="container">
+    <header class="header">
+      <div class="container heading">
+        <nav class="header-navigation">
+          <!---Лого сайта-->
           <a href="./index.html" class="logo" lang="en">
             <span class="half-logo">Web</span>Studio
           </a>
-          <!---Лого сайта-->
-          <ul class="list nav-head container">
-            <!---Меню в хедере-->
+
+          <ul class="list nav-head">
+            <!-----------------Меню в хедере---------------->
             <li>
-              <a href="" class="link"> Студия </a>
+              <a href="" class="link header-link"> Студия </a>
             </li>
             <li>
-              <a href="./portfolio.html" class="link"> Портфолио </a>
+              <a href="./portfolio.html" class="link header-link">
+                Портфолио
+              </a>
             </li>
             <li>
-              <a href="" class="link"> Контакты </a>
+              <a href="" class="link header-link"> Контакты </a>
             </li>
           </ul>
         </nav>
-        <ul class="list post-and-phone container">
-          <!--Почта и телефон-->
+        <ul class="list post-and-phone">
+          <!---------------Почта и телефон---------------->
           <li>
-            <a href="mailto:info@devstudio.com" class="link"
+            <a href="mailto:info@devstudio.com" class="link header-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-link"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -55,45 +60,54 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-text">Эффективные решения для вашего бизнеса</h1>
-        <!--Герой-->
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-text">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <!--------------------Герой------------------->
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
-      <section>
-        <ul class="list about-section">
-          <li class="about-topic">
-            <h3 class="about-us">Внимание к деталям</h3>
-            <p class="about-us-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции
-            </p>
-          </li>
-          <li>
-            <h3 class="about-us">Пунктуальность</h3>
-            <p class="about-us-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-us">Планирование</h3>
-            <p class="about-us-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="about-us">Современные технологии</h3>
-            <p class="about-us-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <!----------------------О нас------------------->
+      <section class="about-section">
+        <div class="container">
+          <ul class="list about">
+            <li class="about-topic">
+              <h3 class="about-us">Внимание к деталям</h3>
+              <p class="about-us-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции
+              </p>
+            </li>
+            <li class="about-topic">
+              <h3 class="about-us">Пунктуальность</h3>
+              <p class="about-us-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="about-topic">
+              <h3 class="about-us">Планирование</h3>
+              <p class="about-us-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="about-topic">
+              <h3 class="about-us">Современные технологии</h3>
+              <p class="about-us-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <section>
         <h2 class="caption">Чем мы занимаемся</h2>
-        <ul class="list container">
+        <ul class="list content">
           <li class="action-jpeg">
             <img
               src="./Images/action1.jpg"
@@ -122,7 +136,7 @@
       </section>
       <section class="team-introduction">
         <h2 class="caption">Наша команда</h2>
-        <ul class="list container">
+        <ul class="list content">
           <li class="team-list">
             <img
               src="./Images/team-card-1.jpg"
