--- a/index.html
+++ b/index.html
@@ -104,108 +104,117 @@
           </ul>
         </div>
       </section>
-
-      <section>
-        <h2 class="caption">Чем мы занимаемся</h2>
-        <ul class="list content">
-          <li class="action-jpeg">
-            <img
-              src="./Images/action1.jpg"
-              alt="Разработка логики программы"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="action-jpeg">
-            <img
-              src="./Images/action2.jpg"
-              alt="Ищем телефоны по фотороботу"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="action-jpeg">
-            <img
-              src="./Images/action3.jpg"
-              alt="Гадание по планшету"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+<!---------------------Чем мы занимаемся---------------------------->
+      <section class="our-work">
+        <div class="container">
+            <h2 class="caption">Чем мы занимаемся</h2>
+            <ul class="list content">
+              <li class="action-jpeg">
+                <img
+                  src="./Images/action1.jpg"
+                  alt="Разработка логики программы"
+                  width="370"
+                  height="294"
+                />
+              </li>
+              <li class="action-jpeg">
+                <img
+                  src="./Images/action2.jpg"
+                  alt="Ищем телефоны по фотороботу"
+                  width="370"
+                  height="294"
+                />
+              </li>
+              <li class="action-jpeg">
+                <img
+                  src="./Images/action3.jpg"
+                  alt="Гадание по планшету"
+                  width="370"
+                  height="294"
+                />
+              </li>
+            </ul>
       </section>
+        </div>
+ <!-------------------Наша команда-------------->       
       <section class="team-introduction">
-        <h2 class="caption">Наша команда</h2>
-        <ul class="list content">
-          <li class="team-list">
-            <img
-              src="./Images/team-card-1.jpg"
-              alt="Игорь Демьяненко"
-              width="260"
-              height="270"
-            />
-            <h3 class="team">Игорь Демьяненко</h3>
-            <p lang="en" class="team-role">Product Designer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./Images/team-card-2.jpg"
-              alt="Ольга Репина"
-              width="260"
-              height="270"
-            />
-            <h3 class="team">Ольга Репина</h3>
-            <p lang="en" class="team-role">Frontend Developer</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./Images/team-card-3.jpg"
-              alt="Николай Тарасов"
-              width="260"
-              height="270"
-            />
-            <h3 class="team">Николай Тарасов</h3>
-            <p lang="en" class="team-role">Marketing</p>
-          </li>
-          <li class="team-list">
-            <img
-              src="./Images/team-card-4.jpg"
-              alt="Михаил Ермаков"
-              width="260"
-              height="270"
-            />
-            <h3 class="team">Михаил Ермаков</h3>
-            <p lang="en" class="team-role">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+        <div class="container">
+            <h2 class="caption">Наша команда</h2>
+            <ul class="list content">
+              <li class="team-list">
+                <img
+                  src="./Images/team-card-1.jpg"
+                  alt="Игорь Демьяненко"
+                  width="260"
+                  height="270"
+                />
+                <h3 class="team">Игорь Демьяненко</h3>
+                <p lang="en" class="team-role">Product Designer</p>
+              </li>
+              <li class="team-list">
+                <img
+                  src="./Images/team-card-2.jpg"
+                  alt="Ольга Репина"
+                  width="260"
+                  height="270"
+                />
+                <h3 class="team">Ольга Репина</h3>
+                <p lang="en" class="team-role">Frontend Developer</p>
+              </li>
+              <li class="team-list">
+                <img
+                  src="./Images/team-card-3.jpg"
+                  alt="Николай Тарасов"
+                  width="260"
+                  height="270"
+                />
+                <h3 class="team">Николай Тарасов</h3>
+                <p lang="en" class="team-role">Marketing</p>
+              </li>
+              <li class="team-list">
+                <img
+                  src="./Images/team-card-4.jpg"
+                  alt="Михаил Ермаков"
+                  width="260"
+                  height="270"
+                />
+                <h3 class="team">Михаил Ермаков</h3>
+                <p lang="en" class="team-role">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </section>
     </main>
+    <!------------------------footer--------------->
     <footer>
-      <a href="./index.html" class="lower-logo" lang="en">
-        <span class="left-half-logo-footer">Web</span
-        ><span class="right-half-logo-footer">Studio</span>
-      </a>
-      <address>
-        <ul>
-          <li class="list footer-adress">
-            <a
-              href="https://goo.gl/maps/MTrRzGX6fxmaniAc8"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="list footer-post-and-phone">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="list footer-post-and-phone">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+          <a href="./index.html" class="lower-logo" lang="en">
+            <span class="left-half-logo-footer">Web</span
+            ><span class="right-half-logo-footer">Studio</span>
+          </a>
+          <address>
+            <ul>
+              <li class="list footer-adress">
+                <a
+                  href="https://goo.gl/maps/MTrRzGX6fxmaniAc8"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="link"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="list footer-post-and-phone">
+                <a href="mailto:info@devstudio.com" class="link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="list footer-post-and-phone">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+      </div>
+      
     </footer>
   </body>
 </html>
