--- a/portfolio.html
+++ b/portfolio.html
@@ -58,152 +58,156 @@
 
     <main>
       <h1 class="visually-hidden">Портфолио</h1>
-      <section>
-        <ul class="list content filter-button">
-          <li>
-            <button type="button" class="portfolio-button">Все</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Маркетинг</button>
-          </li>
-        </ul>
+      <section class="port">
+        <div class="container">
+          <ul class="list content filter-button">
+            <li>
+              <button type="button" class="portfolio-button">Все</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="list content">
-          <li class="projects">
-            <img
-              src="./Images/portfolio-1.jpg"
-              alt="Технокряк"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">Технокряк</h2>
-            <p class="project-type">Веб-сайт</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-2.jpg"
-              alt="Постер New Orlean vs Golden Star"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h2>
-            <p class="project-type">Дизайн</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-3.jpg"
-              alt="Ресторан Seafood"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">
-              Ресторан <span lang="en">Seafood</span>
-            </h2>
-            <p class="project-type">Приложение</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-4.jpg"
-              alt="Проект Prime"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
-            <p class="project-type">Маркетинг</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-5.jpg"
-              alt="Проект Boxes"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
-            <p class="project-type">Приложение</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-6.jpg"
-              alt="Inspiration has no Borders"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en" class="company-name">Inspiration has no Borders</h2>
-            <p class="project-type">Веб-сайт</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-7.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">
-              Издание <span lang="en">Limited Edition</span>
-            </h2>
-            <p class="project-type">Дизайн</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-8.jpg"
-              alt="Проект LAB"
-              width="370"
-              height="294"
-            />
-            <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
-            <p class="project-type">Маркетинг</p>
-          </li>
-          <li class="projects">
-            <img
-              src="./Images/portfolio-9.jpg"
-              alt="Growing Business"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en" class="company-name">Growing Business</h2>
-            <p class="project-type">Приложение</p>
-          </li>
-        </ul>
+          <ul class="list content">
+            <li class="projects">
+              <img
+                src="./Images/portfolio-1.jpg"
+                alt="Технокряк"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">Технокряк</h2>
+              <p class="project-type">Веб-сайт</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-2.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h2>
+              <p class="project-type">Дизайн</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-3.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">
+                Ресторан <span lang="en">Seafood</span>
+              </h2>
+              <p class="project-type">Приложение</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-4.jpg"
+                alt="Проект Prime"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
+              <p class="project-type">Маркетинг</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-5.jpg"
+                alt="Проект Boxes"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
+              <p class="project-type">Приложение</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-6.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="company-name">Inspiration has no Borders</h2>
+              <p class="project-type">Веб-сайт</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-7.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">
+                Издание <span lang="en">Limited Edition</span>
+              </h2>
+              <p class="project-type">Дизайн</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-8.jpg"
+                alt="Проект LAB"
+                width="370"
+                height="294"
+              />
+              <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
+              <p class="project-type">Маркетинг</p>
+            </li>
+            <li class="projects">
+              <img
+                src="./Images/portfolio-9.jpg"
+                alt="Growing Business"
+                width="370"
+                height="294"
+              />
+              <h2 lang="en" class="company-name">Growing Business</h2>
+              <p class="project-type">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html" class="lower-logo" lang="en">
-        <span class="left-half-logo-footer">Web</span>
-        <span class="right-half-logo-footer">Studio</span>
-      </a>
-      <address>
-        <ul>
-          <li class="list footer-adress">
-            <a
-              href="https://goo.gl/maps/MTrRzGX6fxmaniAc8"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="link"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="list footer-post-and-phone">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="list footer-post-and-phone">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="lower-logo" lang="en">
+          <span class="left-half-logo-footer">Web</span
+          ><span class="right-half-logo-footer">Studio</span>
+        </a>
+        <address>
+          <ul>
+            <li class="list footer-adress">
+              <a
+                href="https://goo.gl/maps/MTrRzGX6fxmaniAc8"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="list footer-post-and-phone">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list footer-post-and-phone">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
