--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     </header>
 
     <main>
+      <!--------------------Герой------------------->
       <section class="hero">
         <div class="container">
           <h1 class="hero-text">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <!--------------------Герой------------------->
           <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
@@ -145,41 +145,49 @@
                 <img
                   src="./Images/team-card-1.jpg"
                   alt="Игорь Демьяненко"
-                  width="260"
-                  height="270"
+                  width="270"
+                  height="260"
                 />
-                <h3 class="team">Игорь Демьяненко</h3>
-                <p lang="en" class="team-role">Product Designer</p>
+                <div class="team-info">
+                  <h3 class="team">Игорь Демьяненко</h3>
+                  <p lang="en" class="team-role">Product Designer</p>
+                </div>
               </li>
               <li class="team-list">
                 <img
                   src="./Images/team-card-2.jpg"
                   alt="Ольга Репина"
-                  width="260"
-                  height="270"
+                  width="270"
+                  height="260"
                 />
-                <h3 class="team">Ольга Репина</h3>
-                <p lang="en" class="team-role">Frontend Developer</p>
+                <div class="team-info">
+                  <h3 class="team">Ольга Репина</h3>
+                  <p lang="en" class="team-role">Frontend Developer</p>
+                </div>
               </li>
               <li class="team-list">
                 <img
                   src="./Images/team-card-3.jpg"
                   alt="Николай Тарасов"
-                  width="260"
-                  height="270"
+                  width="270"
+                  height="260"
                 />
-                <h3 class="team">Николай Тарасов</h3>
-                <p lang="en" class="team-role">Marketing</p>
+                <div class="team-info">
+                  <h3 class="team">Николай Тарасов</h3>
+                  <p lang="en" class="team-role">Marketing</p>
+                </div>            
               </li>
               <li class="team-list">
                 <img
                   src="./Images/team-card-4.jpg"
                   alt="Михаил Ермаков"
-                  width="260"
-                  height="270"
+                  width="270"
+                  height="260"
                 />
-                <h3 class="team">Михаил Ермаков</h3>
-                <p lang="en" class="team-role">UI Designer</p>
+                <div class="team-info">
+                  <h3 class="team">Михаил Ермаков</h3>
+                  <p lang="en" class="team-role">UI Designer</p>
+                </div>
               </li>
             </ul>
           </div>
@@ -192,7 +200,7 @@
             <span class="left-half-logo-footer">Web</span
             ><span class="right-half-logo-footer">Studio</span>
           </a>
-          <address>
+          <address class="address-ccs">
             <ul>
               <li class="list footer-adress">
                 <a
