--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">Технокряк</h2>
-              <p class="project-type">Веб-сайт</p>
+              <div class="info-project">
+                <h2 class="company-name">Технокряк</h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -96,10 +98,12 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="project-type">Дизайн</p>
+              <div class="info-project">
+                <h2 class="company-name">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="project-type">Дизайн</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -108,10 +112,12 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">
-                Ресторан <span lang="en">Seafood</span>
-              </h2>
-              <p class="project-type">Приложение</p>
+              <div class="info-project">
+                <h2 class="company-name">
+                  Ресторан <span lang="en">Seafood</span>
+                </h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -120,8 +126,12 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">Проект <span lang="en">Prime</span></h2>
-              <p class="project-type">Маркетинг</p>
+              <div class="info-project">
+                <h2 class="company-name">
+                  Проект <span lang="en">Prime</span>
+                </h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -130,8 +140,12 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">Проект <span lang="en">Boxes</span></h2>
-              <p class="project-type">Приложение</p>
+              <div class="info-project">
+                <h2 class="company-name">
+                  Проект <span lang="en">Boxes</span>
+                </h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -140,8 +154,12 @@
                 width="370"
                 height="294"
               />
-              <h2 lang="en" class="company-name">Inspiration has no Borders</h2>
-              <p class="project-type">Веб-сайт</p>
+              <div class="info-project">
+                <h2 lang="en" class="company-name">
+                  Inspiration has no Borders
+                </h2>
+                <p class="project-type">Веб-сайт</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -150,10 +168,12 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">
-                Издание <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="project-type">Дизайн</p>
+              <div class="info-project">
+                <h2 class="company-name">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="project-type">Дизайн</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -162,8 +182,10 @@
                 width="370"
                 height="294"
               />
-              <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
-              <p class="project-type">Маркетинг</p>
+              <div class="info-project">
+                <h2 class="company-name">Проект <span lang="en">LAB</span></h2>
+                <p class="project-type">Маркетинг</p>
+              </div>
             </li>
             <li class="projects">
               <img
@@ -172,8 +194,10 @@
                 width="370"
                 height="294"
               />
-              <h2 lang="en" class="company-name">Growing Business</h2>
-              <p class="project-type">Приложение</p>
+              <div class="info-project">
+                <h2 lang="en" class="company-name">Growing Business</h2>
+                <p class="project-type">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -186,7 +210,7 @@
           <span class="left-half-logo-footer">Web</span
           ><span class="right-half-logo-footer">Studio</span>
         </a>
-        <address>
+        <address class="address-ccs">
           <ul>
             <li class="list footer-adress">
               <a
