--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
             </li>
           </ul>
 
-          <ul class="list content">
+          <ul class="list content content-projects">
             <li class="projects">
               <img
                 src="./Images/portfolio-1.jpg"
